# xptuto

./: .gitignore  CMakeLists.txt  README.md  run_djinni.py
android/: .gitignore  settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/org/example/xptuto/: ExampleInstrumentedTest.java  HttpInstrumentedTest.java  ThreadsInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  common_src  deps  native-lib.cpp
android/app/src/main/gen_java/org/example/xptuto/: GetReposCb.java  GetUserCb.java  GetUsersCb.java  HttpCallback.java  HttpClient.java  HttpResponse.java  PlatformThreads.java  Repo.java  ThreadFunc.java  User.java  Xptuto.java
android/app/src/main/java/org/example/xptuto/: AndroidThreads.java  JavaHttpClient.java  ListActivity.java  MainActivity.java
android/app/src/main/res/layout/: activity_list.xml  activity_main.xml  list_item.xml
android/app/src/main/res/values/: strings.xml
android/app/src/test/java/org/example/xptuto/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
common/djinni/: main.djinni
common/src/: CMakeLists.txt
common/src/impl/: apple_http_client.hpp  apple_http_client.mm  apple_threads.hpp  apple_threads.mm  base_threads.cpp  base_threads.hpp  get_repos_cb_impl.cpp  get_repos_cb_impl.hpp  get_user_cb_impl.cpp  get_user_cb_impl.hpp  get_users_cb_impl.cpp  get_users_cb_impl.hpp  http_callback_impl.cpp  http_callback_impl.hpp  json_parser.hpp  sql_storage.cpp  sql_storage.hpp  thread_func_impl.cpp  thread_func_impl.hpp  web_http_client.cpp  web_http_client.hpp  web_threads.cpp  web_threads.hpp  xptuto_impl.cpp  xptuto_impl.hpp
common/src/objc/: DJIMarshal+Private.h
common/src/sqlite_orm/: sqlite_orm.h
ios/: Podfile  ccache-clang  ccache-clang++
ios/xptuto/: AppDelegate.h  AppDelegate.mm  ListViewController.h  ListViewController.mm  SceneDelegate.h  SceneDelegate.mm  ViewController.h  ViewController.mm  main.mm
ios/xptuto.xcodeproj/: project.pbxproj
ios/xptuto.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/xptuto.xcodeproj/project.xcworkspace/xcuserdata/stephane.xcuserdatad/: UserInterfaceState.xcuserstate
ios/xptuto.xcodeproj/xcuserdata/stephane.xcuserdatad/xcschemes/: xcschememanagement.plist  xptuto.xcscheme
ios/xptuto/Base.lproj/: Main.storyboard
test/: CMakeLists.txt  apple_test.mm  example.cpp  web_test.cpp  xptutoTest.cpp  xptuto_test.cpp
test/responses/: repos_aosp.json  repos_skonstan.json  users_aosp.json  users_skonstan.json
test/stubs/: http_client_stub.cpp  http_client_stub.hpp  platform_threads_stub.cpp  platform_threads_stub.hpp
web/: CMakeLists.txt  index.html  web_glue.cpp
web/xptuto/: package.json
web/xptuto/public/: index.html  xptuto-web.js  xptuto-web.worker.js
web/xptuto/src/: App.js
